<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="actionSave" translatable="false">Save to Gallery</string>

    <string name="actionToggleAutoScale" translatable="false">Toggle Auto Scale</string>

    <string name="actionToggleBarBorders" translatable="false">Toggle Bar Borders</string>

    <string name="actionToggleHighlight" translatable="false">Toggle Highlight</string>

    <string name="actionToggleIcons" translatable="false">Toggle Icons</string>

    <string name="actionTogglePinch" translatable="false">Toggle PinchZoom</string>

    <string name="actionToggleValues" translatable="false">Toggle Values</string>

    <string name="animateX" translatable="false">Animate X</string>

    <string name="animateXY" translatable="false">Animate XY</string>

    <string name="animateY" translatable="false">Animate Y</string>

    <string name="app_name">Casher</string>

    <string name="auth_error_undefined">Unknown Auth Error</string>
    <string name="auth_login">Login or e-mail</string>
    <string name="auth_need_input_valid_email">Need input correct e-mail</string>
    <string name="auth_password">Password…</string>
    <string name="auth_server_error">Server error. Please try later</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sing_up_in_app">Sing Up in App</string>
    <string name="auth_want_to_logout_description">After that will clear all settings</string>
    <string name="auth_want_to_logout_title">Are you sure you want to perform logout?</string>
    <string name="auth_wrong_login_or_password">Wrong login %1$s or password</string>

    <string name="cancel_caption">Cancel</string>

    <string name="category_purchase">Category payment</string>

    <string name="changed_date_and_time">"Setup time and date: "</string>

    <string name="charts_caption_legend_pie">Category payments</string>
    <string name="charts_caption_pie">Pie Chart at %1$s %2$s year</string>
    <string name="charts_caption_x_axis">%1$s page at %2$s %3$s year</string>
    <string name="charts_caption_y_axis">%1$d-%2$d pages</string>
    <string name="charts_choose_date">Choose date</string>
    <string name="charts_month_end">End Month</string>
    <string name="charts_month_start">Start Month</string>
    <string name="charts_show_bar_chart">Bar Chart</string>
    <string name="charts_show_pie_chart">Pie Chart</string>

    <string name="current_date_and_time">"Current time and date: "</string>

    <string name="dash" translatable="false">-</string>

    <string name="date_purchase">setup date yourself</string>

    <string name="load_data_dialog_content">Stop loading?</string>
    <string name="load_data_dialog_negative_button">Stop</string>
    <string name="load_data_dialog_positive_button">Still wait</string>
    <string name="load_data_dialog_title" translatable="false">@string/app_name</string>

    <string name="month_range_end">End Date: %1$s year, %2$s</string>
    <string name="month_range_start">Start Date: %1$s year, %2$s</string>
    <string name="order_info_time_start">Time from</string>
    <string name="order_info_time_end">Time to</string>

    <string name="price_purchase">Price payment</string>
    <string name="price_purchase_hint">Write number</string>

    <string name="profile_expandable_view_hide_button">Collapse</string>
    <string name="profile_expandable_view_text">More information</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_username">Username</string>

    <string name="screen_add_purchase">Add purchase</string>

    <string name="settings_title">Settings</string>

    <string name="sheet_add_caption">Add</string>
    <string name="sheet_balance_caption">Balance</string>
    <string name="sheet_category_caption">Category</string>
    <string name="sheet_cost_caption">Cost</string>

    <string name="sort_type_asc">ascending</string>
    <string name="sort_type_desc">descending</string>
    <string name="sort_type_un_sort">unsorted</string>

    <string name="splash_beta_title">Beta</string>
    <string name="splash_hint_caption">Hints</string>
    <string name="splash_status_title">Downloading</string>

    <string name="switch_theme_mode">Switch theme mode</string>

    <string name="time_caption">Time</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Payments</string>
    <string name="title_notifications">Settings</string>

    <string name="viewGithub" translatable="false">View on GitHub</string>
</resources>
