<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDarkColor"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.NoActionBar.PopupOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/add_payment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <Button
        android:id="@+id/save_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium_32"
        android:text="@string/sheet_add_caption"
        android:theme="@style/AccentButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancel_purchase"
        app:layout_constraintTop_toBottomOf="@+id/date_purchase" />

    <Button
        android:id="@+id/cancel_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium_32"
        android:text="@string/cancel_caption"
        android:theme="@style/AccentButton"
        app:layout_constraintLeft_toRightOf="@+id/save_purchase"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_purchase" />

    <CheckBox
        android:id="@+id/add_date_purchase"
        style="@style/DatePurchase"
        android:text="@string/date_purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_purchase_et" />

    <ProgressBar
        android:id="@+id/progress_add_purchase"
        android:layout_width="@dimen/spacing_bigger_56"
        android:layout_height="@dimen/spacing_bigger_56"
        android:layout_marginStart="@dimen/spacing_small_x_8"
        android:layout_marginTop="@dimen/spacing_small_x_8"
        android:layout_marginEnd="@dimen/spacing_small_x_8"
        android:layout_marginBottom="@dimen/spacing_small_x_8"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/date_purchase"
        style="@style/DatePurchase"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/font_medium_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_date_purchase"
        tools:text="@string/sheet_add_caption" />

    <com.bugtsa.casher.utils.CustomAutoComplete
        android:id="@+id/category_purchase_et"
        style="@style/EditText.Category"
        android:inputType="text"
        app:drawableLeftCompat="@drawable/ic_search_accent_24dp"
        app:drawableRightCompat="@drawable/ic_cancel_accent_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_purchase_wrapper"
        tools:text="54654632" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_purchase_wrapper"
        style="@style/TilPurchase"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/price_purchase_et"
            style="@style/EditText.ManualCode"
            android:hint="@string/price_purchase_hint"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:text="54654632" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/color_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="sfasfasfasdf"/>

</androidx.constraintlayout.widget.ConstraintLayout>