<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/vCompanyLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/beta_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_normal_y_16"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:minHeight="115dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_dashboard_black_24dp"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/beta_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vCompanyLogo"
            app:layout_constraintBottom_toTopOf="@+id/earth_logo_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_normal_y_16"
            android:text="@string/splash_beta_title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_xx_medium_18" />

        <ImageView
            android:id="@+id/earth_logo_iv"
            android:layout_width="@dimen/splash_earth_logo_size_250"
            android:layout_height="@dimen/splash_earth_logo_size_250"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beta_tv"
            app:layout_constraintBottom_toTopOf="@+id/vStatusSplash"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/img_earth_logo" />

        <TextView
            android:id="@+id/vStatusSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/earth_logo_iv"
            app:layout_constraintBottom_toTopOf="@+id/vHintContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_normal_y_16"
            android:text="@string/splash_status_title"
            android:textColor="@color/primaryTextColor" />

        <LinearLayout
            android:id="@+id/vHintContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/hintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_hint_caption"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_x_medium_16" />

            <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/font_medium_14"
                tools:text="@string/splash_hint_caption" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>